js/src/tests/test262/built-ins/Promise/reject/ctx-non-object.js
assert
.
throws
(
TypeError
function
(
)
{
Promise
.
reject
.
call
(
undefined
[
]
)
;
}
)
;
assert
.
throws
(
TypeError
function
(
)
{
Promise
.
reject
.
call
(
null
[
]
)
;
}
)
;
assert
.
throws
(
TypeError
function
(
)
{
Promise
.
reject
.
call
(
86
[
]
)
;
}
)
;
assert
.
throws
(
TypeError
function
(
)
{
Promise
.
reject
.
call
(
'
string
'
[
]
)
;
}
)
;
assert
.
throws
(
TypeError
function
(
)
{
Promise
.
reject
.
call
(
true
[
]
)
;
}
)
;
assert
.
throws
(
TypeError
function
(
)
{
Promise
.
reject
.
call
(
Symbol
(
)
[
]
)
;
}
)
;
reportCompare
(
0
0
)
;
